# infinibattle-2019

./: README.MD
infinibattle-giuseppe/: .gitignore  Makefile  StarterBot.py  config-feedforward  evolve-minimal.py
infinibattle-giuseppe-real/: .gitignore  Makefile  StarterBot.py
infinibattle-giuseppe/neat/: __init__.py  activations.py  aggregations.py  attributes.py  checkpoint.py  config.py  distributed.py  genes.py  genome.py  graphs.py  math_util.py  parallel.py  population.py  reporting.py  reproduction.py  six_util.py  species.py  stagnation.py  statistics.py  threaded.py
infinibattle-giuseppe/neat/ctrnn/: __init__.py
infinibattle-giuseppe/neat/iznn/: __init__.py
infinibattle-giuseppe/neat/nn/: __init__.py  feed_forward.py  recurrent.py
planet-wars/: .gitignore  Cargo.toml  README.md
planet-wars/engine/: Cargo.toml
planet-wars/engine/src/: lib.rs  planet.rs  pos.rs  replay.rs  ship.rs  universe.rs
planet-wars/engine/src/universe/: adjacency_matrix.rs  builder.rs
planet-wars/runner/: Cargo.toml
planet-wars/runner/src/: arguments.rs  bot.rs  lib.rs  main.rs
planet-wars/runner/src/bot/: reader.rs  writer.rs
planet-wars/visualizer-wasm/: Cargo.toml  package.json
planet-wars/visualizer-wasm/src/: canvas.rs  lib.rs  visualizer.rs
